--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@ html, * {
       display: flex;
       width: 100%;
       height: 90vh;
-      border: 1px solid #939393f7;
+      // border: 1px solid #939393f7;
       border-radius: 10px 0px 0px 10px;
       float: left;
       cursor: crosshair;
@@ -47,7 +47,7 @@ html, * {
       justify-content: space-around;
       padding: 20px;
       align-items: center;
-      border: 1px solid #939393f7;
+      // border: 1px solid #939393f7;
       cursor: pointer;
       box-shadow: 0px 0px 5px 1px;
       border-radius: 0px 10px 10px 0px;
